client/app/shared/components/thesaurus/_thesaurus.theme.scss
@use 'sass:map';
@use '@angular/material' as mat;

@mixin thesaurus($theme) {
    $primary: map.get($theme, primary);
    $accent: map.get($theme, accent);
    $warn: map.get($theme, warn);
    $bg: map.get($theme, background);
    $fg: map.get($theme, foreground);

    $config: mat.get-color-config($theme);
    $is-dark-theme: map.get($config, is-dark);
    $label-color: mat.get-color-from-palette($fg, secondary-text, if($is-dark-theme, 0.7, 0.6)) !important;
}

